--- a/src/css/font-face.css
+++ b/src/css/font-face.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Rustico Regular";
-    src: url('../fonts/Rustico-Regular.otf') format('otf');
+    src: url('/static/fonts/Rustico-Regular.otf') format('otf');
     font-weight: normal;
     font-style: normal;
 }
