--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Rustico Regular";
+    font-family: "Rustico-Regular";
     src: url('../fonts/Rustico-Regular.otf') format('otf');
     font-weight: normal;
     font-style: normal;
