--- a/src/css/global.css
+++ b/src/css/global.css
@@ -11,7 +11,7 @@
 
 
 .rustico {
-    font-family: "Rustico-Regular";
+    font-family: "Rustico";
     font-weight: normal;
     font-style: normal;
 }
