--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Rustico-Regular";
-    src: url('../fonts/Rustico-Regular.otf') format('otf');
+    font-family: "Rustico";
+    src: url('../fonts/Rustico-Regular.otf');
     font-weight: normal;
     font-style: normal;
 }
