--- a/src/css/global.css
+++ b/src/css/global.css
@@ -11,9 +11,10 @@
 
 
 .rustico {
-    font-family: "Rustico";
-    font-weight: normal;
+    font-family: "Brandon Grotesque";
+    font-weight: 700;
     font-style: normal;
+    letter-spacing: 0.20rem;
 }
 
 .btn {
