--- a/src/css/global.css
+++ b/src/css/global.css
@@ -48,26 +48,36 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239e9e9e' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
-.easy3 {
-    position: relative;
-    /* background-image: linear-gradient(to right, #EF6C00 , #FF9800); */
-    width: 100%;
-    min-height: 300px;
-    z-index: 2;
+.angle {
+  background-image: linear-gradient(to bottom right, #111 , #212121);
+  color: #fff;
+  position: relative;
+  z-index: 1;
+}
+.angle:after {
+  background: inherit;
+  bottom: 0;
+  content: '';
+  display: block;
+  height: 50%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  transform: skewY(-1.5deg);
+  transform-origin: 100%;
+  z-index: -1;
 }
 
-.easy3:before {
-    background: inherit;
-    top: 0;
-    content: '';
-    display: block;
-    height: 50%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    transform: skewY(-3deg);
-    transform-origin: 0%;
-    z-index: -5;
+.transition {
+  transition: all 1s;
+}
+
+.right{
+  transform: translateX(33.3%)
+}
+
+.left{
+  transform: translateX(-33.3%)
 }
 
 .footer{
