--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Rustico";
-    src: url('../fonts/Rustico-Regular.otf');
+    font-family: "Futura Condensed Extra Bold";
+    src: url('../fonts/Future-Condensed-Extra-Bold.otf');
     font-weight: normal;
     font-style: normal;
 }
