--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,6 +1,5 @@
 @font-face {
     font-family: "Futura Condensed Extra Bold";
     src: url('../fonts/Futura Condensed Extra Bold.otf');
-    font-weight: normal;
-    font-style: normal;
+    letter-spacing: 0;
 }
