--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,5 +1,6 @@
 @font-face {
-    font-family: "Futura Condensed Extra Bold";
+    font-family: "Futura Condensed Extra";
     src: url('../fonts/Futura Condensed Extra Bold.otf');
+    font-weight: bold;
     letter-spacing: 0;
 }
