--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -2,5 +2,5 @@
     font-family: "Futura Condensed Extra";
     src: url('../fonts/Futura Condensed Extra Bold.otf');
     font-weight: bold;
-    letter-spacing: 0;
+    letter-spacing: 2rem;
 }
