--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,6 +1,13 @@
 @font-face {
-    font-family: "Futura Condensed Extra";
+    /* font-family: "Futura Condensed Extra";
     src: url('../fonts/Futura Condensed Extra Bold.otf');
     font-weight: 700;
-    font-stretch: expanded;
+    font-stretch: expanded; */
+
+    font-family: 'futuracondensed_extra_bold';
+    src: url('../fonts/futura_condensed_extra_bold-webfont.woff2') format('woff2'),
+            url('../fonts/futura_condensed_extra_bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    
 }
