--- a/src/css/global.css
+++ b/src/css/global.css
@@ -57,6 +57,8 @@
   top: 50%
 }
 
+
+
 .dots {
     background-color: #fafafa;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239e9e9e' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
@@ -134,6 +136,22 @@
     font-size: 30px;
   }
 
-
-  /* Custom Slider */
+.pulse {
+  animation: pulse 3s ease 0s infinite;
+}
   
+
+
+  /* Keyframs */
+
+  @keyframes pulse {
+    0% {
+        transform: scale(0.85);
+    }
+    50% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.85);
+    }
+  }
