--- a/src/css/global.css
+++ b/src/css/global.css
@@ -8,7 +8,9 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
-
+p {
+  @apply text-gray-700 font-light
+}
 
 .btn {
     @apply font-bold py-2 px-4 uppercase;
@@ -29,7 +31,7 @@
 }
 
 .btn-red {
-    @apply bg-red-600 text-white;
+    @apply bg-red-500 text-white;
 }
 
 .btn-red:hover {
@@ -116,12 +118,12 @@
 
 .footer{
     position: relative;
-    background-image: linear-gradient(to right, #111 , #212121);
+    background-image: linear-gradient(to right, #424242 , #212121);
     width: 100%;
     min-height: 300px;
 }
 
-.footer:before {
+/* .footer:before {
     background: inherit;
     top: 0;
     content: '';
@@ -133,6 +135,15 @@
     transform: skewY(-2deg);
     transform-origin: 0%;
     z-index: -5;
+} */
+
+.active-tab {
+  border-bottom: 2px solid black;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.active-tab:hover {
+  cursor: pointer;
 }
 
 
