--- a/src/css/global.css
+++ b/src/css/global.css
@@ -122,14 +122,6 @@ p {
 
 
 
-.active-tab {
-  border-bottom: 2px solid black;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.active-tab:hover {
-  cursor: pointer;
-}
 
 
 .pulse {
@@ -203,4 +195,114 @@ p {
     height: auto;
     transform: scaleY(1);
     transform-origin: top;
+  }
+
+
+
+
+.active-tab {
+  background-color:  #424242 !important;
+  color: #fff!important;
+}
+
+.active-tab::after {
+  border-left: 20px solid #424242	!important;
+}
+
+  .arrow-steps .step {
+    font-size: 15px;
+    color: #424242;
+    cursor: default;
+    margin: 0 3px;
+    padding: 10px 10px 10px 30px;
+    min-width: 180px;
+    position: relative;
+    background-color: #f5f5f5;
+    user-select: none; 
+    transition: background-color 0.2s ease;
+  }
+  
+  .arrow-steps .step:after,
+  .arrow-steps .step:before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: -20px;
+    width: 0;
+    height: 0;
+    border-top: 22px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid #f5f5f5;	
+
+
+    z-index: 2;
+    transition: border-color 0.2s ease;
+
+  }
+
+  .arrow-steps .step:before {
+    right: auto;
+    left: 0;
+    border-left: 22px solid #fff;	
+    z-index: 0;
+  }
+
+  .arrow-steps .step:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+
+
+  /* Tab Media Query */
+  
+
+  @media (max-width: 1023px) {
+
+    .active-tab::after {
+      border-top: 22px solid #424242	!important;
+    }
+
+    .arrow-steps .step:after,
+    .arrow-steps .step:before {
+      content: " ";
+      position: absolute;
+      /* top: 0; */
+      bottom: -22px;
+      right: 0;
+      width: 0;
+      height: 0;
+  
+      border-top: 22px solid #f5f5f5;
+      border-right: 20px solid transparent;
+      border-left: 20px solid transparent;	
+  
+      z-index: 2;
+      transition: border-color 0.2s ease;
+  
+    }
+
+    .arrow-steps .step:before {
+      right: 10px;
+      border-top: 22px solid #fff;	
+      z-index: 0;
+    }
+
+    .arrow-steps .step {
+      border-radius: 4px;
+      margin: 2px 5px;
+    }
+  }
+
+  .arrow-steps .step:hover {
+    cursor: pointer;
+  }
+  
+ 
+  .arrow-steps .step:first-child:before {
+    border: none;
+  }
+  
+  .arrow-steps .step:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
   }
