--- a/src/css/global.css
+++ b/src/css/global.css
@@ -8,9 +8,14 @@
 
 body, html {
   overflow-x: hidden;
+  color: #212121;
 }
 p {
-  @apply text-gray-700 font-light
+  @apply text-gray-900 font-light;
+}
+
+a {
+  @apply text-blue-500;
 }
 
 .btn {
@@ -130,7 +135,7 @@ p {
 
 .footer{
     position: relative;
-    background-image: linear-gradient(to right, #424242 , #212121);
+    /* background-image: linear-gradient(to right, #424242 , #212121); */
     width: 100%;
     min-height: 300px;
 }
@@ -213,20 +218,22 @@ p {
   }
 
 
-
+.active-tabz {
+  @apply bg-gray-900 text-gray-100;
+}
 
 .active-tab {
-  background-color:  #424242 !important;
+  background-color:  #212121 !important;
   color: #fff !important;
 }
 
 .active-tab:after {
-  border-left: 20px solid #424242 !important;
+  border-left: 20px solid #212121 !important;
 }
 
   .arrow-steps .step {
     font-size: 15px;
-    color: #424242;
+    color: #212121;
     cursor: default;
     margin: 0 3px;
     padding: 10px 10px 10px 30px;
@@ -261,6 +268,7 @@ p {
     border-left: 22px solid #fff;	
     z-index: 0;
   }
+  
 
   .arrow-steps .step:first-child {
     border-top-left-radius: 4px;
@@ -274,7 +282,7 @@ p {
   @media (max-width: 1023px) {
 
     .active-tab:after {
-      border-top: 22px solid #424242	!important;
+      border-top: 22px solid #212121	!important;
       border-left: 20px solid transparent !important;
     }
 
@@ -299,14 +307,25 @@ p {
 
     .arrow-steps .step:before {
       right: 10px;
+      left: auto;
       border-top: 22px solid #fff;	
       z-index: 0;
     }
 
+
     .arrow-steps .step {
-      border-radius: 4px;
+      font-size: 15px;
+      color: #212121;
+      cursor: default;
       margin: 2px 5px;
+      padding: 10px 10px 10px 30px;
+      min-width: 180px;
+      position: relative;
+      background-color: #f5f5f5;
+      user-select: none; 
+      transition: background-color 0.2s ease;
     }
+    
   }
 
   .arrow-steps .step:hover {
