--- a/src/css/global.css
+++ b/src/css/global.css
@@ -8,6 +8,7 @@
 
 body, html {
   overflow-x: hidden;
+  position: relative;
   color: #212121;
 }
 p {
@@ -66,6 +67,33 @@ a {
   @apply border-r border-black;
 
 }
+
+.angle-border-2 {
+  position: relative;
+}
+.angle-border-2:after {
+  content: "";
+  position: absolute;
+  right: -2px;
+  top: 0;
+  bottom: 0;
+  transform:rotate(12.5deg);
+  height: 100%;
+  @apply border-r border-black;
+
+}
+
+@media only screen and (max-width: 767px) {
+
+  .angle-border-2 {
+    position: relative;
+  }
+  .angle-border-2:after {
+   display:none;
+  }
+  
+ }
+
 
 .programnav {
   transform: translateY(-200%);
@@ -131,6 +159,14 @@ a {
   z-index: -1;
 }
 
+
+.personas {
+  @apply mt-10;
+}
+
+/* .personas:first-child {
+  @apply mt-auto;
+} */
 
 
 .footer{
@@ -231,6 +267,12 @@ a {
   border-left: 20px solid #212121 !important;
 }
 
+.arrow-steps {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 10px;
+}
+
   .arrow-steps .step {
     font-size: 15px;
     color: #212121;
@@ -276,58 +318,6 @@ a {
   }
 
 
-  /* Tab Media Query */
-  
-
-  @media (max-width: 1023px) {
-
-    .active-tab:after {
-      border-top: 22px solid #212121	!important;
-      border-left: 20px solid transparent !important;
-    }
-
-    .arrow-steps .step:after,
-    .arrow-steps .step:before {
-      content: " ";
-      position: absolute;
-      top: auto;
-      bottom: -42px;
-      right: 10px;
-      width: 0;
-      height: 0;
-  
-      border-top: 22px solid #f5f5f5;
-      border-right: 20px solid transparent;
-      border-left: 20px solid transparent;	
-  
-      z-index: 2;
-      transition: border-color 0.2s ease;
-  
-    }
-
-    .arrow-steps .step:before {
-      right: 10px;
-      left: auto;
-      border-top: 22px solid #fff;	
-      z-index: 0;
-    }
-
-
-    .arrow-steps .step {
-      font-size: 15px;
-      color: #212121;
-      cursor: default;
-      margin: 2px 5px;
-      padding: 10px 10px 10px 30px;
-      min-width: 180px;
-      position: relative;
-      background-color: #f5f5f5;
-      user-select: none; 
-      transition: background-color 0.2s ease;
-    }
-    
-  }
-
   .arrow-steps .step:hover {
     cursor: pointer;
   }
@@ -340,4 +330,33 @@ a {
   .arrow-steps .step:first-child {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+  }
+
+
+   /* Tab Media Query */
+  
+
+   @media (max-width: 1023px) {
+
+    .arrow-steps .step {
+      font-size: 15px;
+      color: #212121;
+      cursor: default;
+      margin: 2px 0px;
+      padding: 10px 10px 10px 30px;
+      min-width: 180px;
+      position: relative;
+      background-color: #f5f5f5;
+      user-select: none; 
+      transition: background-color 0.2s ease;
+      border-radius: 4px;
+    }
+
+    .arrow-steps .step:after,
+    .arrow-steps .step:before {
+      display: none;
+  
+    }
+
+    
   }
