--- a/src/css/global.css
+++ b/src/css/global.css
@@ -185,6 +185,11 @@ a {
   scroll-snap-align: center;
 }
 
+@media (min-width: 1024px) {
+  .icon:last-child {
+    display: none;
+  }
+ }
 .pulse {
   animation: pulse 3s ease 0s infinite;
 }
