--- a/src/css/global.css
+++ b/src/css/global.css
@@ -13,6 +13,13 @@ body, html {
   scroll-behavior: smooth;
 }
 
+
+video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
 p {
   @apply text-gray-900 font-light;
 }
