--- a/src/css/global.css
+++ b/src/css/global.css
@@ -11,15 +11,17 @@ body, html {
   position: relative;
   color: #212121;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 
 video {
-  object-fit: cover;
+  object-fit: fill;
   width: 100%;
-  height: 100%;
-  background: #fff;
+  height: auto;
+  background-color: #fff;
 }
+
 p {
   @apply text-gray-900 font-light;
 }
@@ -299,64 +301,68 @@ a {
   border-left: 20px solid #212121 !important;
 }
 
-  .arrow-steps .step {
-    font-size: 15px;
-    color: #212121;
-    cursor: default;
-    margin: 0 3px;
-    padding: 10px 10px 10px 30px;
-    min-width: 180px;
-    position: relative;
-    background-color: #f5f5f5;
-    user-select: none; 
-    transition: background-color 0.2s ease;
-  }
-  
-  .arrow-steps .step:after,
-  .arrow-steps .step:before {
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: -20px;
-    width: 0;
-    height: 0;
-    border-top: 22px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 20px solid #f5f5f5;	
+.arrow-steps .step {
+  font-size: 15px;
+  color: #212121;
+  cursor: default;
+  margin: 0 3px;
+  padding: 10px 10px 10px 30px;
+  min-width: 180px;
+  position: relative;
+  background-color: #f5f5f5;
+  user-select: none; 
+  transition: background-color 0.2s ease;
+}
+
+.arrow-steps .step a {
+  color: inherit;
+}
+
+.arrow-steps .step:after,
+.arrow-steps .step:before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: -20px;
+  width: 0;
+  height: 0;
+  border-top: 22px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-left: 20px solid #f5f5f5;	
 
 
-    z-index: 2;
-    transition: border-color 0.2s ease;
+  z-index: 2;
+  transition: border-color 0.2s ease;
 
-  }
+}
 
-  .arrow-steps .step:before {
-    right: auto;
-    left: 0;
-    border-left: 22px solid #fff;	
-    z-index: 0;
-  }
-  
-
-  .arrow-steps .step:first-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
+.arrow-steps .step:before {
+  right: auto;
+  left: 0;
+  border-left: 22px solid #fff;	
+  z-index: 0;
+}
 
 
-  .arrow-steps .step:hover {
-    cursor: pointer;
-  }
-  
- 
-  .arrow-steps .step:first-child:before {
-    border: none;
-  }
-  
-  .arrow-steps .step:first-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
+.arrow-steps .step:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+
+.arrow-steps .step:hover {
+  cursor: pointer;
+}
+
+
+.arrow-steps .step:first-child:before {
+  border: none;
+}
+
+.arrow-steps .step:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
 
 
    /* Tab Media Query */
@@ -368,14 +374,14 @@ a {
       font-size: 15px;
       color: #212121;
       cursor: default;
-      margin: 2px 0px;
+      margin: 1px 0px;
       padding: 10px 10px 10px 30px;
       min-width: 180px;
       position: relative;
       background-color: #f5f5f5;
       user-select: none; 
       transition: background-color 0.2s ease;
-      border-radius: 4px;
+      border-radius: 0px;
     }
 
     .arrow-steps .step:after,
