--- a/src/css/global.css
+++ b/src/css/global.css
@@ -402,5 +402,11 @@ button:focus {
   
     }
 
+    .arrow-steps .step:first-child {
+      border-top-left-radius: 0px;
+      border-bottom-left-radius: 0px;
+    }
+    
+
     
   }
