--- a/src/css/global.css
+++ b/src/css/global.css
@@ -16,13 +16,6 @@ body, html {
 } */
 
 
-video {
-  object-fit: fill;
-  width: 100%;
-  height: auto;
-  background-color: #fff;
-}
-
 p {
   @apply text-gray-900 font-light;
 }
@@ -409,4 +402,21 @@ button:focus {
     
 
     
+  }
+
+
+  .video-ratio {
+    width: 100%;
+    padding-top:  calc(411.66 / 647.92 * 100%);
+    height: 0px;
+    position: relative;
+  }
+
+  .video-ratio video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    background-color: #fff;
+    padding-left: -25%;
   }
