--- a/src/css/global.css
+++ b/src/css/global.css
@@ -210,6 +210,34 @@ button:focus {
   scroll-snap-align: center;
 }
 
+.scroll-btn {
+  opacity: 0;
+  top: 50%;
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  padding: 10px;
+  z-index: 100;
+  background: #fafafa;
+  color: black;
+  transform: translateY(-50%);
+  transition: 0.5s;
+}
+
+.scroll-left {
+  left: 25px;
+}
+
+.scroll-right {
+  right: 25px;
+}
+
+.scroll-btns:hover > .scroll-btn {
+  opacity: 1;
+}
+
+
+
 @media (min-width: 1024px) {
   .icon:last-child {
     display: none;
