--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -5,6 +5,7 @@
     font-stretch: expanded; */
 
     font-family: 'futuracondensed_extra_bold';
+    font-display: auto;
     src: url('../fonts/futura_condensed_extra_bold-webfont.woff2') format('woff2'),
             url('../fonts/futura_condensed_extra_bold-webfont.woff') format('woff');
     font-weight: normal;
