--- a/src/css/global.css
+++ b/src/css/global.css
@@ -308,7 +308,7 @@ button:focus {
 
 
   .animateNav {
-    animation: slide-down 1s ease;
+    animation: transition 1s ease;
     transition: transform 0.3 ease-out;
     overflow: hidden;
     height: auto;
@@ -431,3 +431,73 @@ button:focus {
 
     
   }
+
+
+  .hamburger {
+    padding: 1rem 1rem;
+    display: inline-block;
+    cursor: pointer;
+    transition-property: opacity, filter;
+    transition-duration: 0.15s;
+    transition-timing-function: linear;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    overflow: visible; 
+    }
+    /* .hamburger:hover {}
+    .hamburger.is-active:hover {} */
+    .hamburger.is-active .hamburger-inner,
+    .hamburger.is-active .hamburger-inner::before,
+    .hamburger.is-active .hamburger-inner::after {
+      background-color: #212121; }
+  
+  .hamburger-box {
+    width: 30px;
+    height: 24px;
+    display: inline-block;
+    position: relative; }
+  
+  .hamburger-inner {
+    display: block;
+    top: 50%;
+    margin-top: -2px; }
+    .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+      width: 30px;
+      height: 4px;
+      background-color: #212121;
+      border-radius: 2px;
+      position: absolute;
+      transition-property: transform;
+      transition-duration: 0.15s;
+      transition-timing-function: ease; }
+    .hamburger-inner::before, .hamburger-inner::after {
+      content: "";
+      display: block; }
+    .hamburger-inner::before {
+      top: -10px; }
+    .hamburger-inner::after {
+      bottom: -10px; }
+
+
+
+  .hamburger--slider-r .hamburger-inner {
+    top: 2px; }
+    .hamburger--slider-r .hamburger-inner::before {
+      top: 10px;
+      transition-property: transform, opacity;
+      transition-timing-function: ease;
+      transition-duration: 0.15s; }
+    .hamburger--slider-r .hamburger-inner::after {
+      top: 20px; }
+  
+  .hamburger--slider-r.is-active .hamburger-inner {
+    transform: translate3d(0, 10px, 0) rotate(-45deg); }
+    .hamburger--slider-r.is-active .hamburger-inner::before {
+      transform: rotate(45deg) translate3d(5.71429px, -6px, 0);
+      opacity: 0; }
+    .hamburger--slider-r.is-active .hamburger-inner::after {
+      transform: translate3d(0, -20px, 0) rotate(90deg); }
