--- a/src/css/global.css
+++ b/src/css/global.css
@@ -15,6 +15,9 @@ body, html {
   @apply border border-red-500;
 } */
 
+h1,h2,h3,h4,h5,h6 {
+  font-weight: bolder;
+}
 
 p {
   @apply text-gray-900 font-light;
