--- a/src/css/global.css
+++ b/src/css/global.css
@@ -311,13 +311,23 @@ button:focus {
 
 
 
-  .animateNav {
+  /* .animateNav {
     animation: transition 1s ease;
     transition: transform 0.3 ease-out;
     overflow: hidden;
     height: 100%;
     transform: scaleY(1);
     transform-origin: top;
+  } */
+
+  .slide-up {
+    transform: translateY(-125%);
+    transition: transform 0.5s ease-in-out;
+  }
+
+  .slide-down{
+    transform: translateY(0);
+    transition: transform 0.5s ease-in-out;
   }
 
 
@@ -435,6 +445,10 @@ button:focus {
 
     
   }
+
+
+
+
 
 
   .hamburger {
