--- a/src/css/global.css
+++ b/src/css/global.css
@@ -42,7 +42,7 @@ button:focus {
 }
 
 .btn {
-    @apply font-bold py-2 px-4 uppercase;
+    @apply py-2 px-4 uppercase;
     text-decoration: none;
 }
 
