--- a/src/css/global.css
+++ b/src/css/global.css
@@ -11,6 +11,15 @@ body, html {
   scroll-behavior: smooth;
 }
 
+ul {
+  list-style-type: circle;
+  font-weight: normal;
+  @apply pl-4
+}
+
+ul > li {
+  @apply pl-2
+}
 /* * {
   @apply border border-red-500;
 } */
@@ -97,9 +106,18 @@ button:focus {
   font-size: 0.5rem !important;
 }
 
+.no-style-ul {
+  list-style: none !important;
+}
+
+.pricing {
+  @apply pl-0
+}
+
 .pricing > li {
   @apply border-b border-gray-200 p-4
 }
+
 
 .angle-border {
   position: relative;
