--- a/src/css/global.css
+++ b/src/css/global.css
@@ -24,13 +24,33 @@ ul > li {
   @apply border border-red-500;
 } */
 
-.statement {
+/* .statement {
   @apply uppercase font-bold;
   font-family: "futuracondensed_extra_bold", sans-serif !important;
-}
+} */
 
 h1,h2,h3,h4,h5,h6 {
   font-weight: 900;
+}
+
+h1 {
+  @apply uppercase font-bold text-4xl leading-none;
+  font-family: "futuracondensed_extra_bold", sans-serif !important;
+}
+
+h2 {
+  @apply uppercase font-bold text-3xl leading-none;
+  font-family: "futuracondensed_extra_bold", sans-serif !important;
+}
+
+h3 {
+  @apply uppercase font-bold text-2xl leading-none;
+  font-family: "futuracondensed_extra_bold", sans-serif !important;
+}
+
+h4 {
+  @apply uppercase font-bold text-xl leading-none;
+  font-family: "futuracondensed_extra_bold", sans-serif !important;
 }
 
 p {
