--- a/src/css/global.css
+++ b/src/css/global.css
@@ -515,8 +515,70 @@ button:focus {
     
   }
 
+  progress {
+    background: black;
+    border: 0;
+    height: 18px;
+    border-radius: 9px;
+  }
+  progress::-webkit-progress-bar {
+    -webkit-appearance: none;
+    appearance: none;
+    
+    background: #eeeeee;
+    border: 0;
+    height: 18px;
+    border-radius: 9px;
+  }
+  progress::-webkit-progress-value {
+    border: 0;
+    height: 18px;
+    border-radius: 9px;
+    background: black;
+  }
+  progress::-moz-progress-bar {
+    border: 0;
+    height: 18px;
+    border-radius: 9px;
+  }
 
 
+  .cartDisplay {
+    display: block;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 900;
+    background: rgba(250, 249, 247, 0.8);
+    transition: opacity 666ms ease 0s;
+  }
+
+  .cart {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 6px, rgba(0, 0, 0, 0.1) 0px 0px 1px;
+    z-index: 1000;
+    right: 0px;
+    transform: translate3d(0px, 0px, 0px);
+    background: rgb(250, 250, 250);
+    transition: transform 0.48s cubic-bezier(0.19, 1, 0.22, 1) 0s;
+  }
+
+  .cartHidden {
+    display: none;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 900;
+    background: rgba(250, 249, 247, 0.8);
+    transition: opacity 666ms ease 0s;
+  }
 
 
 
