--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -4,11 +4,13 @@
     font-weight: 700;
     font-stretch: expanded; */
 
-    font-family: 'futuracondensed_extra_bold';
+    /* font-family: 'futuracondensed_extra_bold'; */
+    font-family: 'Futura Condensed Bold';
     font-display: auto;
     src: url('../fonts/futura_condensed_extra_bold-webfont.woff2') format('woff2'),
             url('../fonts/futura_condensed_extra_bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+
     
 }
