--- a/src/css/global.css
+++ b/src/css/global.css
@@ -35,22 +35,22 @@ h1,h2,h3,h4,h5,h6 {
 
 h1 {
   @apply uppercase font-bold text-4xl leading-none;
-  font-family: "futuracondensed_extra_bold", sans-serif !important;
+  font-family: "Futura Condensed Bold", sans-serif !important;
 }
 
 h2 {
   @apply uppercase font-bold text-3xl leading-none;
-  font-family: "futuracondensed_extra_bold", sans-serif !important;
+  font-family: "Futura Condensed Bold", sans-serif !important;
 }
 
 h3 {
   @apply uppercase font-bold text-2xl leading-none;
-  font-family: "futuracondensed_extra_bold", sans-serif !important;
+  font-family: "Futura Condensed Bold", sans-serif !important;
 }
 
 h4 {
   @apply uppercase font-bold text-xl leading-none;
-  font-family: "futuracondensed_extra_bold", sans-serif !important;
+  font-family: "Futura Condensed Bold", sans-serif !important;
 }
 
 p {
@@ -60,6 +60,25 @@ p {
 a {
   @apply text-blue-500;
 }
+
+
+@media only screen and (max-width: 812px) {
+  .marquee-parent {
+    width: 125%;
+    overflow: hidden !important;
+  }
+  .marquee {	
+    transform:translateX(100%);
+    animation: marquee 14s linear infinite;
+    white-space: nowrap;
+    width: 110%;
+   }
+}
+
+@keyframes marquee {
+  0%   { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+ }
 
 .appearance-none {
   -webkit-appearance: none;
@@ -614,6 +633,94 @@ button:focus {
     background: rgba(250, 249, 247, 0.8);
     transition: opacity 666ms ease 0s;
   }
+
+
+
+
+  .ribbon-wrapper {
+    position: relative;
+  }
+  .ribbon-front {
+    height: 50px;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    color: #f8f8f8;
+    text-align: center;
+    text-shadow: 0px 1px 2px #cc6666;
+  }
+  
+  .ribbon-front,
+  .ribbon-back-left,
+  .ribbon-back-right {
+    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
+    -khtml-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
+    -o-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
+  }
+  
+  .ribbon-edge-topleft,
+  .ribbon-edge-topright,
+  .ribbon-edge-bottomleft,
+  .ribbon-edge-bottomright {
+    position: absolute;
+    z-index: 1;
+    border-style: solid;
+    height: 0px;
+    width: 0px;
+  }
+  
+  
+  .ribbon-edge-bottomleft,
+  .ribbon-edge-bottomright {
+    top: 50px;
+  }
+  
+  .ribbon-edge-topleft,
+  .ribbon-edge-bottomleft {
+    left: 0px;
+    border-color: transparent #9b1724 transparent transparent;
+  }
+  
+  .ribbon-edge-topleft {
+    top: -5px;
+    border-width: 5px 10px 0 0;
+  }
+  .ribbon-edge-bottomleft {
+    border-width: 0 10px 0px 0;
+  }
+  
+  .ribbon-edge-topright,
+  .ribbon-edge-bottomright {
+    right: 0;
+    border-color: transparent transparent transparent #9b1724;
+  }
+  
+  .ribbon-edge-topright {
+    top: 0px;
+    border-width: 0px 0 0 10px;
+  }
+  .ribbon-edge-bottomright {
+    border-width: 0 0 5px 10px;
+  }
+  
+  @keyframes flow {
+    0% {
+      left: -20px;
+      opacity: 0;
+    }
+    50% {
+      left: 100px;
+      opacity: 0.3;
+    }
+    100% {
+      left: 180px;
+      opacity: 0;
+    }
+  }
+
+
+  
 
 
 
