--- a/src/css/global.css
+++ b/src/css/global.css
@@ -647,81 +647,11 @@ button:focus {
     z-index: 2;
     color: #f8f8f8;
     text-align: center;
-    text-shadow: 0px 1px 2px #cc6666;
+    text-shadow: 0px 1px 2px #9e9e9e;
   }
   
-  .ribbon-front,
-  .ribbon-back-left,
-  .ribbon-back-right {
-    -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
-    -khtml-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
-    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
-    -o-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.55);
-  }
-  
-  .ribbon-edge-topleft,
-  .ribbon-edge-topright,
-  .ribbon-edge-bottomleft,
-  .ribbon-edge-bottomright {
-    position: absolute;
-    z-index: 1;
-    border-style: solid;
-    height: 0px;
-    width: 0px;
-  }
-  
-  
-  .ribbon-edge-bottomleft,
-  .ribbon-edge-bottomright {
-    top: 50px;
-  }
-  
-  .ribbon-edge-topleft,
-  .ribbon-edge-bottomleft {
-    left: 0px;
-    border-color: transparent #9b1724 transparent transparent;
-  }
-  
-  .ribbon-edge-topleft {
-    top: -5px;
-    border-width: 5px 10px 0 0;
-  }
-  .ribbon-edge-bottomleft {
-    border-width: 0 10px 0px 0;
-  }
-  
-  .ribbon-edge-topright,
-  .ribbon-edge-bottomright {
-    right: 0;
-    border-color: transparent transparent transparent #9b1724;
-  }
-  
-  .ribbon-edge-topright {
-    top: 0px;
-    border-width: 0px 0 0 10px;
-  }
-  .ribbon-edge-bottomright {
-    border-width: 0 0 5px 10px;
-  }
-  
-  @keyframes flow {
-    0% {
-      left: -20px;
-      opacity: 0;
-    }
-    50% {
-      left: 100px;
-      opacity: 0.3;
-    }
-    100% {
-      left: 180px;
-      opacity: 0;
-    }
-  }
-
 
   
-
 
 
   .hamburger {
