--- a/src/css/global.css
+++ b/src/css/global.css
@@ -20,45 +20,76 @@ ol, ul {
 ul > li {
   @apply pl-2
 }
-/* * {
-  @apply border border-red-500;
-} */
 
-/* .statement {
-  @apply uppercase font-bold;
-  font-family: "futuracondensed_extra_bold", sans-serif !important;
-} */
-
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 900;
-}
 
 h1 {
-  @apply uppercase font-bold text-4xl leading-none;
-  font-family: "Futura Condensed Bold", sans-serif !important;
+  @apply uppercase text-5xl leading-none;
+  /* font-family: "Futura LT W04 Bold Cond1475886", sans-serif !important; */
 }
 
 h2 {
-  @apply uppercase font-bold text-3xl leading-none;
-  font-family: "Futura Condensed Bold", sans-serif !important;
+  @apply uppercase text-3xl leading-none;
 }
 
 h3 {
-  @apply uppercase font-bold text-2xl leading-none;
-  font-family: "Futura Condensed Bold", sans-serif !important;
+  @apply uppercase text-2xl leading-none;
 }
 
 h4 {
-  @apply uppercase font-bold text-xl leading-none;
-  font-family: "Futura Condensed Bold", sans-serif !important;
+  @apply uppercase text-xl leading-none;
+}
+
+h5,h6{
 }
 
 p {
   @apply text-gray-900 font-light my-4;
 }
 
-a {
-  @apply text-blue-500;
+.link {
+  @apply text-blue-500 uppercase font-bold;
+  font-family: "Futura LT W04 Bold Cond1475886", sans-serif !important;
+}
+
+
+.button {
+  @apply text-sm rounded-sm leading-none border text-white border-black bg-gray-900 uppercase inline-block relative;
+  font-family: "Futura LT W04 Bold Cond1475886", sans-serif !important;
+  transition: all 0.5s;
+}
+
+.button:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;  
+  right: -20px;
+  transition: 0.5s;
+  color: white;
+}
+
+.button:hover{
+  padding-right: 24px;
+}
+
+.button:hover:after {
+  opacity: 1;
+  right: 10px;
+}
+
+.button-sm {
+  @apply px-4 py-2;
+}
+
+.button-lg {
+  @apply px-4 py-4 text-xl text-center;
+}
+
+.button-primary {
+  @apply border text-white border-black bg-gray-900;
+}
+
+.button-primary:hover {
+  @apply bg-black px-6;
 }
 
 
